--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,19 @@
     <artifactId>java</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+
+    <properties>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+    </properties>
     <modules>
         <module>netty</module>
+        <module>basic-java</module>
+
     </modules>
 
     <dependencyManagement>
