--- a/basic-java/pom.xml
+++ b/basic-java/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>basic-java</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
