--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,13 @@
     </modules>
 
     <dependencyManagement>
-
+        <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2</version>
+        </dependency>
+        </dependencies>
     </dependencyManagement>
 
     <dependencies>
